# AdventOfCode2022

./: .clang-format  .clang-tidy  .gitignore  .notusing.clang-tidy  CMakeLists.txt  LICENSE  README.md  compile_commands.json  standard_library_module.cpp
.github/workflows/: cmake.yml  windows_cmake.yml
cmake/: CompileStandardLibraryHeaderUnits.cmake  CreateTargetLink.cmake  StandardProjectSettings.cmake
day1/: CMakeLists.txt  CMakePresets.json  README.md  day1lib.cpp  header1.hpp  input1.cpp  input1.hpp  module1.hpp  problem.md  solution.cpp  solution1.cpp  solution2.cpp  utility.cpp  utility.hpp
day1/part1/: CMakeLists.txt  README.md  day1_solution1  solution.cpp
day1/part2/: CMakeLists.txt  day1_solution2
day10/: CMakeLists.txt  README.md  input10.cpp  input10.hpp  solution1.cpp  solution2.cpp
day11/: CMakeLists.txt  README.md  input11.cpp  input11.hpp  solution1.cpp  solution2.cpp
day2/: CMakeLists.txt  README.md  input2.cpp  input2.hpp  output.txt  output_part_2  output_part_2.txt  problem_part_1.md  solution1.cpp  solution2.cpp  solution_part_1.cpp  solution_part_2.cpp
day2/part1/: CMakeLists.txt  day2_solution1
day2/part2/: CMakeLists.txt  README.md  day2_solution2
day3/: CMakeLists.txt  README.md  day3common.cpp  day3common.hpp  input3.cpp  input3.hpp  module3.cpp  output_part_1.txt  output_part_2  output_part_2.txt  problem_part_1.md  solution1.cpp  solution2.cpp  solution_part_1.cpp  solution_part_2.cpp
day3/part1/: CMakeLists.txt  day3_solution1
day3/part2/: CMakeLists.txt  README.md  day3_solution2
day4/: CMakeLists.txt  README.md  input4.cpp  input4.hpp  module4.cpp  output_part_1.txt  output_part_2.txt  solution1.cpp  solution2.cpp  solution_part_1.cpp  solution_part_2.cpp
day4/part1/: CMakeLists.txt  day4_solution1
day4/part2/: CMakeLists.txt  day4_solution2
day5/: CMakeLists.txt  README.md  input5.cpp  input5.hpp  module5.cpp  solution1.cpp  solution2.cpp
day5/part1/: CMakeLists.txt
day5/part2/: CMakeLists.txt
day6/: CMakeLists.txt  README.md  input6.cpp  input6.hpp  solution1.cpp  solution2.cpp
day6/part1/: CMakeLists.txt  solution.cpp
day6/part2/: CMakeLists.txt
day7/: CMakeLists.txt  README.md  input7.cpp  input7.hpp  module7.cpp  solution1.cpp  solution2.cpp
day7/part1/: CMakeLists.txt  README.md
day7/part2/: CMakeLists.txt  solution.cpp
day8/: CMakeLists.txt  README.md  input8.cpp  input8.hpp  module8.cpp  solution1.cpp  solution2.cpp
day8/part1/: CMakeLists.txt  solution.cpp
day8/part2/: CMakeLists.txt  solution.cpp
day9/: CMakeLists.txt  README.md  input9.cpp  input9.hpp  solution1.cpp  solution2.cpp
day9/part1/: CMakeLists.txt  solution.cpp
day9/part2/: CMakeLists.txt  solution.cpp
