add_executable(day3_solution1 solution1.cpp)
target_link_libraries(day3_solution1 PRIVATE project_options project_warnings)
CreateTargetLink(day3_solution1)

add_executable(day3_solution2 solution2.cpp)
target_link_libraries(day3_solution2 PRIVATE project_options project_warnings)
CreateTargetLink(day3_solution2)

