add_executable(day6_solution1 solution1.cpp)
target_link_libraries(day6_solution1 PRIVATE project_options project_warnings)
CreateTargetLink(day6_solution1)

add_executable(day6_solution2 solution2.cpp)
target_link_libraries(day6_solution2 PRIVATE project_options project_warnings)
CreateTargetLink(day6_solution2)


