add_executable(day7_solution1 solution1.cpp)
target_link_libraries(day7_solution1 PRIVATE project_options project_warnings)
CreateTargetLink(day7_solution1)

add_executable(day7_solution2 solution2.cpp)
target_link_libraries(day7_solution2 PRIVATE project_options project_warnings)
CreateTargetLink(day7_solution2)

